# claim-reference-validator

./: .gitignore  EXTRACTION_GUIDE.md  LANGCHAIN_REQ.md  README.md  REQUIREMENTS.md  compose.dev.yml  compose.yml  package.json  pnpm-lock.yaml
backend/: .dockerignore  .env-example  .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini  setup.cfg
backend/alembic/: env.py
backend/alembic/versions/: 756ee64220d8_create_claims_and_references_tables.py  d8b5bbd49dbe_create_documents_table.py  f9c4a366ea82_create_projects_table.py
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/core/: auth.py  config.py
backend/app/db/: base_class.py
backend/app/models/: __init__.py  claim.py  claim_reference.py  document.py  project.py  reference.py
backend/app/schemas/: claim.py  docling_extraction.py  document.py  extraction.py  pagination.py  project.py  reference.py
backend/app/services/: docling_service.py  embedding_client.py  lm_studio_client.py  reference_dedup.py  text_extraction.py
backend/scripts/: __init__.py  dev_entrypoint.sh  wait_for_db.py
backend/tests/: conftest.py
embedding-service/: .env.docker  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini
embedding-service/app/: config.py  main.py  model_manager.py  models.py
embedding-service/tests/: README.md  __init__.py  conftest.py  test_api.py  test_model_manager.py
frontend/: .env.example  Dockerfile  nuxt.config.ts  orval.config.mts  orval.config.ts  package.json  pnpm-lock.yaml
frontend/app/: app.vue
frontend/app/layouts/: default.vue
(+114 files in other folders)
