[project]
name = "embedding-service"
version = "0.1.0"
description = "Embedding Service for semantic search and vector generation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.123.7",
    "pydantic-settings>=2.12.0",
    "sentence-transformers>=5.1.2",
    "torch>=2.9.1",
    "numpy>=2.3.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "httpx>=0.28.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
